# find_your_job

./: .gitignore  pyproject.toml
accounts/: enums.py  jwt.py  managers.py  urls.py
accounts/admin/: __init__.py  base_user.py  company_founder.py  company_staff.py  job_seeker.py
accounts/migrations/: 0001_initial.py  0002_companystaff.py  0003_alter_companyfounder_company_logo.py
accounts/models/: __init__.py  admin.py  base_user.py  company_founder.py  company_staff.py  job_seeker.py
accounts/repositories/: job_seeker.py
accounts/serializers/customer_panel/: login.py  login_verify_otp.py
accounts/views/customer_panel/: login.py  login_send_otp.py  login_verify_otp.py
common/: base_model.py  otp.py  response.py  validations.py
config/: urls.py  wsgi.py
config/settings/: base.py  local.py
jobs/: enums.py
jobs/migrations/: 0001_initial.py
jobs/models/: __init__.py  applied_job.py  job.py  saved_job.py
